blazor server customers implementation

--- a/code/PracticalApps/NorthwindBlazorServer/Pages/Customers.razor
+++ b/code/PracticalApps/NorthwindBlazorServer/Pages/Customers.razor
@@ -3,6 +3,13 @@
 
 <h1>Customers</h1>
 
+<div class="form-group">
+    <a class="btn btn-info" href="createcustomer">
+        <i class="oi oi-plus"></i>
+        Create New
+    </a>
+</div>
+
 @if (customers == null)
 {
     <p><em>Loading...</em></p>
